Change namespace to Cainy\Vessel

--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,30 @@
 {
-    "name": ":vendor_slug/:package_slug",
-    "description": ":package_description",
+    "name": "cainy/laravel-vessel",
+    "description": "A Laravel Package for interacting with registries following the Open Container Initiative Distribution Specification ",
     "keywords": [
-        ":vendor_name",
+        "John Wagner",
         "laravel",
-        ":package_slug"
+        "container",
+        "registry",
+        "distribution"
     ],
-    "homepage": "https://github.com/:vendor_slug/:package_slug",
+    "homepage": "https://github.com/cainytheslave/laravel-vessel",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "John Wagner",
+            "email": "info@techbra.in",
             "role": "Developer"
         }
     ],
     "require": {
         "php": "^8.2",
-        "spatie/laravel-package-tools": "^1.16",
-        "illuminate/contracts": "^10.0||^11.0"
+        "ext-openssl": "*",
+        "christian-riesen/base32": "^1.6",
+        "illuminate/contracts": "^10.0||^11.0",
+        "lcobucci/clock": "^3.3",
+        "lcobucci/jwt": "^5.5",
+        "spatie/laravel-package-tools": "^1.16"
     },
     "require-dev": {
         "laravel/pint": "^1.14",
@@ -35,19 +41,19 @@
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src/",
-            "VendorName\\Skeleton\\Database\\Factories\\": "database/factories/"
+            "Cainy\\Vessel\\": "src/",
+            "Cainy\\Vessel\\Database\\Factories\\": "database/factories/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests/",
+            "Cainy\\Vessel\\Tests\\": "tests/",
             "Workbench\\App\\": "workbench/app/"
         }
     },
     "scripts": {
         "post-autoload-dump": "@composer run prepare",
-        "clear": "@php vendor/bin/testbench package:purge-skeleton --ansi",
+        "clear": "@php vendor/bin/testbench package:purge-laravel-vessel --ansi",
         "prepare": "@php vendor/bin/testbench package:discover --ansi",
         "build": [
             "@composer run prepare",
@@ -73,10 +79,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "VendorName\\Skeleton\\SkeletonServiceProvider"
+                "Cainy\\Vessel\\VesselServiceProvider"
             ],
             "aliases": {
-                "Skeleton": "VendorName\\Skeleton\\Facades\\Skeleton"
+                "LaravelVessel": "Cainy\\Vessel\\Facades\\Vessel"
             }
         }
     },
